fix: header z-index 수정

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -9,6 +9,7 @@
   padding: 9px 200px;
   border-bottom: 1px #dfdfdf;
   width: 100vw;
+  z-index: 1000;
 }
 
 .header-container {
